# swarm-it-adk

./: .gitignore  API_AUDIT_RESOLUTION.md  CLAUDE.md  COMMERCIAL_USE.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  CONTRIBUTING.md  DOE_VALIDATION_REPORT.md  FEATURES.md  FEEDBACK.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_AUDIT.md  LICENSE_NOTICE.md  NOTICE  OUTLINE.md  PATENT_NOTICE.md  QUICKSTART.md  QUICKSTART_FIXED.md  README.md  README_LICENSE_SECTION.md  SECURITY.md  TRADEMARK_NOTICE.md  WHAT_WAS_MISSED.md  buildspec.yml  doe_api_evidence.json  doe_api_proofs.json  doe_evidence_log.json  doe_loop2_evidence.json  doe_proofs.json  requirements.txt  test_doe_api_learning.py  test_doe_loop2_handoff.py  test_doe_validation.py  test_real_implementation.py
.claude/: settings.local.json
adk/: README.md  pyproject.toml
adk/examples/: fastapi_app.py  openai_integration.py
adk/swarm_it/: __init__.py  async_processing.py  audit.py  byok_engine.py  caching.py  chaos.py  circuit_breakers.py  client.py  conversation.py  decorators.py  errors.py  exceptions.py  feedback_loops.py  fluent.py  health.py  mcp_tools.py  models.py  monitoring.py  notification_plugins.py  one_shot.py  playground.py  rate_limiting.py  secrets.py  sidecar_manager.py  storage_plugins.py  swarm_factory.py  tracing.py  validation.py
adk/swarm_it/integrations/: fastapi.py  langchain.py
adk/swarm_it/local/: __init__.py
adk/swarm_it/providers/: README.md  __init__.py  anthropic_provider.py  base.py  bedrock.py  embedding.py  factory.py  mimo.py  openai_provider.py  openrouter.py
adk/swarm_it/taxonomy/: __init__.py  bridge.py
adk/swarm_it/topology/: certifier.py  models.py  patterns.py
adk/tests/: test_engine.py  test_taxonomy.py  test_topology.py
agents/: README_PODCAST_MIMO.md  batch_regenerate_podcasts.py  podcast_mimo.py  test_one_podcast.sh
autotuning/: README.md  experiment_runner.py
clients/: README.md
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: main.rs
clients/rust/src/: lib.rs
docs/: AUTORESEARCH_IDEAS.md  AUTORESEARCH_RSCT.md  CLAUDE_CODE_SETUP.md  GOOGLE_FORM_TEMPLATE.md  HUGGINGFACE_STRATEGY.md  ROUND1_FEEDBACK_FORM.md  SECURITY.md  TALLY_FORM_ROUND1.txt
examples/: Dockerfile.example  a2a_bedrock.py  a2a_hierarchical.py  a2a_pdf_upgrade_swarm.py  a2a_rag_swarm.py  a2a_swarm.py  api_showcase.py  app.py  auth_demo.py  benchmark_jailbreak.py  benchmark_learning.py  demo.py  demo_semantic.py  docker-compose.yml  quickstart.py  (+4 more)
(+162 files in other folders)
