[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-it"
version = "0.1.0"
description = "Execution governance for AI systems - RSCT certification SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Swarm It Team" },
]
keywords = [
    "ai",
    "llm",
    "safety",
    "certification",
    "governance",
    "rsct",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
fastapi = [
    "fastapi>=0.100.0",
]
all = [
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://swarm-it.dev"
Documentation = "https://docs.swarm-it.dev"
Repository = "https://github.com/swarm-it/swarm-it-python"

[tool.hatch.build.targets.wheel]
packages = ["swarm_it"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
