[package]
name = "swarmit"
version = "0.1.0"
edition = "2021"
description = "Swarm-It Rust client for RSCT certification"
license = "Apache-2.0"
repository = "https://github.com/NextShiftConsulting/swarm-it"
keywords = ["swarm-it", "rsct", "ai", "llm", "certification"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
